# email_verify

./: .dockerignore  .gitignore  Dockerfile  README.md  common.py  fly.toml  pyproject.toml  requirements.txt  trampoline.py  vercel.json  verify.py
ssl/: IntCA.crt  IntCA.pem  RootCA.crt  RootCA.pem  cert_chain.crt  psync.club.crt  psync.club.pem
web/: index.html
