[tool.poetry]
name = "trampoline"
version = "0.99.1"
description = "Check emails?"
authors = ["Srikanth Gopalakrishnan <srikanth.gokr@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dnspython = "^2.5.0"
fastapi = "^0.109.2"
disposable-email-domains = "^0.0.95"
pydantic = {extras = ["email"], version = "^2.6.1"}
hypercorn = "^0.16.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.40.3"}
rich = "^13.7.0"
pendulum = "^3.0.0"
orjson = "^3.9.13"
brotli-asgi = "^1.4.0"
aiosmtplib = "^2.0.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
