[tool.poetry]
name = "trampoline"
version = "1.0"
description = "Check emails (No *.edu or business email support)"
authors = ["Srikanth Gopalakrishnan <srikanth.gokr@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dnspython = "^2.5.0"
fastapi = "^0.111"
disposable-email-domains = "^0.0.103"
pydantic = {extras = ["email"], version = "^2.7.4"}
hypercorn = "^0.17"
sentry-sdk = {extras = ["fastapi"], version = "^2.7.1"}
rich = "^13.7.1"
pendulum = "^3.0.0"
orjson = "^3.10"
brotli-asgi = "^1.4.0"
aiosmtplib = "^3.0.1"
toml = "^0.10.2"
asyncwhois = "^1.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
ruff = "^0.5"
types-toml = "^0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
